--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
     <header>
         <div class="container nav">
-            <a href="#" class="logo">AF.ABOUZAID</a>
+                <a href="#" class="logo">Abderrahmane Fouzi ABOUZAID</a><br>
             <div class="nav-links">
                 <a href="#achievements"><span>01.</span> Highlights</a>
                 <a href="#about"><span>02.</span> About</a>
