--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                 <div class="project-card" onclick="openModal('pwc')">
                     <div class="project-top">
                         <svg class="folder-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" /></svg>
-                        <div style="color: var(--accent); font-size: 0.9rem;">Strategy Roadmap</div>
+                        <div style="color: var(--accent); font-size: 0.9rem;">Click for details</div>
                     </div>
                     <h3>PwC x ACC: Digital Energy Transformation</h3>
                     <p class="project-desc">Award-winning strategic roadmap designed for a major renewable energy operator to integrate AI, IoT, and Digital Twins.</p>
@@ -306,7 +306,7 @@
                 <div class="project-card" onclick="openModal('medisphere')">
                     <div class="project-top">
                         <svg class="folder-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1" d="M3 7v10a2 2 0 002 2h14a2 2 0 002-2V9a2 2 0 00-2-2h-6l-2-2H5a2 2 0 00-2 2z" /></svg>
-                        <div style="color: var(--accent); font-size: 0.9rem;">View Code</div>
+                        <div style="color: var(--accent); font-size: 0.9rem;">Click for details</div>
                     </div>
                     <h3>Medisphere – Healthcare System</h3>
                     <p class="project-desc">Full-stack Java/Nuxt.js application managing users and authentication securely at scale.</p>
@@ -320,7 +320,7 @@
                 <div class="project-card" onclick="openModal('sim')">
                     <div class="project-top">
                         <svg class="folder-icon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1" d="M3 7v10a2 2 0 002 2h14a2 2 0 002-2V9a2 2 0 00-2-2h-6l-2-2H5a2 2 0 00-2 2z" /></svg>
-                        <div style="color: var(--accent); font-size: 0.9rem;">View Code</div>
+                        <div style="color: var(--accent); font-size: 0.9rem;">Click for details</div>
                     </div>
                     <h3>Graph-Based Epidemic Simulation</h3>
                     <p class="project-desc">C-based algorithmic simulation modeling infection spread in vehicular networks.</p>
